--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.14",
   "description": "Sync Things.app Logbook with Obsidian",
   "author": "liamcain",
+  "source": "src/index.ts",
   "main": "main.js",
   "license": "MIT",
   "scripts": {
@@ -12,9 +13,11 @@
     "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
-    "obsidian": "obsidianmd/obsidian-api#master",
+    "obsidian": "^0.13.11",
     "obsidian-daily-notes-interface": "0.9.2",
     "papaparse": "5.3.1",
+    "parcel": "^2.2.0",
+    "parcel-plugin-externals": "^0.5.2",
     "tslib": "2.2.0"
   },
   "devDependencies": {
@@ -31,5 +34,15 @@
     "moment": "2.29.1",
     "rollup": "2.41.2",
     "typescript": "4.2.3"
+  },
+  "targets": {
+    "main": {
+      "context": "electron-renderer",
+      "optimize": false,
+      
+      "includeNodeModules": {
+        "obsidian": false
+      }
+    }
   }
 }
